fix the missing space for selectors

--- a/blog-assets/code-style.css
+++ b/blog-assets/code-style.css
@@ -424,12 +424,13 @@ p {
   }
 
   :root:not([data-theme="light"]) body,
-  :root:not([data-theme="light"])h1,
-  :root:not([data-theme="light"])h2,
-  :root:not([data-theme="light"])h3,
-  :root:not([data-theme="light"])h4,
-  :root:not([data-theme="light"])h5,
-  :root:not([data-theme="light"])h6 {
+  :root:not([data-theme="light"]) p,
+  :root:not([data-theme="light"]) h1,
+  :root:not([data-theme="light"]) h2,
+  :root:not([data-theme="light"]) h3,
+  :root:not([data-theme="light"]) h4,
+  :root:not([data-theme="light"]) h5,
+  :root:not([data-theme="light"]) h6 {
     color: #e2e8f0;
   }
 
@@ -475,6 +476,7 @@ p {
 }
 
 [data-theme="dark"] body,
+[data-theme="dark"] p,
 [data-theme="dark"] h1,
 [data-theme="dark"] h2,
 [data-theme="dark"] h3,
